--- a/app/src/main/res/layout/fragment_houses.xml
+++ b/app/src/main/res/layout/fragment_houses.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.houses.HousesFragment"
+    tools:context=".ui.houseCharacters.HousesFragment"
     android:layout_marginBottom="64dp">
 
     <ImageView
