--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -17,8 +17,29 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/charactersRecycleView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/teachSpellButton"
         />
+
+    <Button
+        android:id="@+id/teachSpellButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Teach a spell"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/characters_title"/>
+
+    <Button
+        android:id="@+id/selectAllButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select All"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/teachSpellButton"
+        app:layout_constraintBottom_toTopOf="@id/charactersRecycleView"
+        app:layout_constraintStart_toEndOf="@id/characters_title"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/charactersRecycleView"
