--- a/app/src/main/res/layout/character_info_dialog.xml
+++ b/app/src/main/res/layout/character_info_dialog.xml
@@ -5,16 +5,30 @@
     android:padding="16dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/characterImageView"
-            android:layout_width="128dp"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_foreground" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/characterImageView"
+                android:layout_width="128dp"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_launcher_foreground" />
+
+            <Button
+                android:id="@+id/swapHouseButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Swap House" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/characterInfo"
